# EventSimilarityAnalysis

./: .gitignore  config.yaml  main.py  main_refactor_workflow.py  pyproject.toml
output/windowed_mmd_20260428_151010/: metadata.yaml  results.csv
output/windowed_mmd_consecutive_20260428_151818/: metadata.yaml
output/windowed_mmd_consecutive_20260428_152423/: metadata.yaml  results.csv
output/windowed_mmd_periodic_20260428_151840/: metadata.yaml  results.csv
output/windowed_mmd_periodic_20260428_152840/: metadata.yaml  results.csv
src/event_analysis_toolbox/: all_to_all_comparison.py  baseline_comparison.py  chamfer_distance.py  comparison_common.py  event_modifiers.py  feature_preprocessing.py  mds_mmd.py  metrics.py  mmd.py  visualization.py  visualization_mds.py  windowed_mmd.py
src/event_data_toolbox/: __init__.py  event_data_manager.py  event_windows_management.py
